TW-79101 Switch artifact fetching to new apache http client