@@ -5,12 +5,13 @@ import com.intellij.openapi.util.Pair;
 import java.io.IOException;
 import java.io.InterruptedIOException;
 import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
 import java.net.SocketException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
@@ -24,7 +25,6 @@ import jetbrains.buildServer.artifacts.s3.publish.errors.TeamCityPresignedUrlsPr
 import jetbrains.buildServer.artifacts.s3.publish.presigned.util.HttpClientUtil;
 import jetbrains.buildServer.artifacts.s3.transport.*;
 import jetbrains.buildServer.http.HttpUserAgent;
-import jetbrains.buildServer.http.HttpUtil;
 import jetbrains.buildServer.log.Loggers;
 import jetbrains.buildServer.serverSide.TeamCityProperties;
 import jetbrains.buildServer.util.ExceptionUtil;
@@ -33,16 +33,25 @@ import jetbrains.buildServer.util.amazon.retry.Retrier;
 import jetbrains.buildServer.util.amazon.retry.impl.AbortingListener;
 import jetbrains.buildServer.util.amazon.retry.impl.ExponentialDelayListener;
 import jetbrains.buildServer.util.amazon.retry.impl.LoggingRetrierListener;
-import jetbrains.buildServer.xmlrpc.NodeIdCookie;
 import jetbrains.buildServer.xmlrpc.NodeIdHolder;
 import jetbrains.buildServer.xmlrpc.XmlRpcConstants;
-import org.apache.commons.httpclient.HttpClient;
-import org.apache.commons.httpclient.HttpConnectionManager;
-import org.apache.commons.httpclient.HttpMethod;
-import org.apache.commons.httpclient.methods.PostMethod;
-import org.apache.commons.httpclient.methods.StringRequestEntity;
 import org.apache.http.HttpHeaders;
+import org.apache.http.HttpResponse;
+import org.apache.http.auth.AuthScope;
+import org.apache.http.client.CredentialsProvider;
+import org.apache.http.client.config.RequestConfig;
+import org.apache.http.client.methods.HttpPost;
 import org.apache.http.entity.ContentType;
+import org.apache.http.entity.StringEntity;
+import org.apache.http.entity.mime.HttpMultipartMode;
+import org.apache.http.entity.mime.MultipartEntity;
+import org.apache.http.entity.mime.content.StringBody;
+import org.apache.http.impl.client.BasicCookieStore;
+import org.apache.http.impl.client.BasicCredentialsProvider;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
+import org.apache.http.impl.cookie.BasicClientCookie;
+import org.apache.http.util.EntityUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -59,7 +68,9 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   @NotNull
   private final TeamCityConnectionConfiguration myTeamCityConnectionConfiguration;
   @NotNull
-  private final AtomicReference<HttpClient> myTeamCityClient;
+  private final AtomicReference<CloseableHttpClient> myTeamCityClient;
+  @NotNull
+  private final BasicCookieStore myCookieStore;
   @NotNull
   private final Collection<ArtifactTransportAdditionalHeadersProvider> myAdditionalHeadersProviders;
   @NotNull
@@ -76,6 +87,7 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
                                                    @NotNull final Collection<ArtifactTransportAdditionalHeadersProvider> additionalHeadersProviders) {
     myPresignedUrlsPostUrl = teamCityConnectionConfiguration.getTeamCityUrl() + "/httpAuth/" + StringUtil.removeLeadingSlash(teamCityConnectionConfiguration.getUrlsProviderPath());
     myTeamCityConnectionConfiguration = teamCityConnectionConfiguration;
+    myCookieStore = new BasicCookieStore();
     myTeamCityClient = new AtomicReference<>(createClient(myTeamCityConnectionConfiguration));
     myAdditionalHeadersProviders = additionalHeadersProviders;
     myNodeIdHolder = teamCityConnectionConfiguration.getNodeIdHolder();
@@ -89,13 +101,25 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   }
 
   @NotNull
-  private HttpClient createClient(@NotNull final TeamCityConnectionConfiguration config) {
+  private CloseableHttpClient createClient(@NotNull final TeamCityConnectionConfiguration config) {
     try {
-      final HttpClient httpClient = HttpUtil.createHttpClient(config.getConnectionTimeout(), new URL(myPresignedUrlsPostUrl), config.getCredentials());
-      final HttpConnectionManager httpConnectionManager = HttpClientUtil.createConnectionManager(config.getConnectionTimeout(), config.getNThreads());
-      httpClient.setHttpConnectionManager(httpConnectionManager);
-      return httpClient;
-    } catch (MalformedURLException e) {
+      final URI url = new URI(myPresignedUrlsPostUrl);
+      final AuthScope scope = new AuthScope(url.getHost(), url.getPort());
+      final CredentialsProvider provider = new BasicCredentialsProvider();
+      provider.setCredentials(scope, config.getCredentials());
+      int connectionTimeout = config.getConnectionTimeout() * 1000;
+      final RequestConfig requestConfig = RequestConfig.custom()
+        .setConnectionRequestTimeout(connectionTimeout)
+        .setSocketTimeout(connectionTimeout)
+        .build();
+
+      return HttpClients.custom()
+                        .setDefaultCredentialsProvider(provider)
+                        .setDefaultRequestConfig(requestConfig)
+                        .setMaxConnPerRoute(config.getNThreads())
+                        .setDefaultCookieStore(myCookieStore)
+                        .build();
+    } catch (URISyntaxException e) {
       LOGGER.warnAndDebugDetails("Malformed url to TeamCity server", e);
       throw new MisconfigurationException(e);
     }
@@ -106,19 +130,20 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   public Collection<PresignedUrlDto> getRegularPresignedUrls(@NotNull final List<String> objectKeys, @NotNull Map<String, String> digests) {
     validateClient();
     try {
-      final PostMethod post = postTemplate();
-      post.setRequestEntity(s3ObjectKeysRequestEntity(objectKeys, digests));
+      final HttpPost post = postTemplate();
+      post.setEntity(s3ObjectKeysRequestEntity(objectKeys, digests));
       int maxHeaders = TeamCityProperties.getInteger(S3_ARTIFACT_KEYS_HEADER_MAX_NUMBER, DEFAULT_ARTIFACT_KEYS_HEADER_MAX_NUMBER);
       for (int i = 0; i < Math.min(maxHeaders, objectKeys.size()); i++) {
-        post.addRequestHeader(S3Constants.S3_ARTIFACT_KEYS_HEADER_NAME, objectKeys.get(i));
+        post.addHeader(S3Constants.S3_ARTIFACT_KEYS_HEADER_NAME, objectKeys.get(i));
       }
 
       setNodeIdCookie();
 
-      final String responseBody = HttpClientUtil.executeAndReleaseConnection(myTeamCityClient.get(), post, myErrorHandler);
+      final HttpResponse response = HttpClientUtil.executeAndReleaseConnection(myTeamCityClient.get(), post, myErrorHandler).get();
+      final String responseBody = EntityUtils.toString(response.getEntity());
 
       return deserializeResponseV2(responseBody).getPresignedUrls();
-    } catch (HttpClientUtil.HttpErrorCodeException | IOException e) {
+    } catch (HttpClientUtil.HttpErrorCodeException | IOException | ExecutionException | InterruptedException e) {
       LOGGER.warnAndDebugDetails("Failed resolving S3 pre-signed URL, got exception " + e.getMessage(), e);
       throw new FetchFailedException(e);
     }
@@ -130,10 +155,22 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
     if (nodeId == null) return;
 
     try {
-      NodeIdCookie.setNodeIdCookie(myNodeIdHolder, myTeamCityClient.get(), myServerUrl);
-    } catch (MalformedURLException e) {
+      final URI uri = new URI(myServerUrl);
+      final BasicClientCookie cookie = getCookie(uri);
+      myCookieStore.addCookie(cookie);
+    } catch (URISyntaxException e) {
       Loggers.AGENT.warnAndDebugDetails("Failed to create java.net.URL object from: " + myServerUrl + ", cookie: " + XmlRpcConstants.NODE_ID_COOKIE + " cannot be set", e);
     }
+  }
+
+  @NotNull
+  private BasicClientCookie getCookie(URI uri) {
+    final BasicClientCookie cookie = new BasicClientCookie(XmlRpcConstants.NODE_ID_COOKIE, myNodeIdHolder.getOwnerNodeId());
+    cookie.setDomain(uri.getHost());
+    cookie.setPath("/");
+    cookie.setExpiryDate(new Date(System.currentTimeMillis() + myNodeIdHolder.getExpirationTime() * 1000L));
+    cookie.setSecure(false);
+    return cookie;
   }
 
   @NotNull
@@ -141,7 +178,7 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
     validateClient();
     try {
       return fetchPresignedUrlDto(objectKey, s3ObjectKeyRequestEntity(objectKey, digest, ttl));
-    } catch (HttpClientUtil.HttpErrorCodeException | IOException e) {
+    } catch (HttpClientUtil.HttpErrorCodeException | IOException | ExecutionException | InterruptedException e) {
       LOGGER.warnAndDebugDetails("Failed resolving S3 pre-signed URL, got exception " + e.getMessage(), e);
       throw new FetchFailedException(e);
     }
@@ -159,12 +196,14 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   }
 
   @NotNull
-  private PresignedUrlDto fetchPresignedUrlDto(@NotNull final String objectKey, @NotNull final StringRequestEntity requestEntity) throws IOException {
-    final PostMethod post = postTemplate();
-    post.setRequestEntity(requestEntity);
-    post.setRequestHeader("Content-Type", "application/xml; charset=" + StandardCharsets.UTF_8.name());
-    post.setRequestHeader(S3Constants.S3_ARTIFACT_KEYS_HEADER_NAME, objectKey);
-    final String responseBody = HttpClientUtil.executeAndReleaseConnection(myTeamCityClient.get(), post, myErrorHandler);
+  private PresignedUrlDto fetchPresignedUrlDto(@NotNull final String objectKey, @NotNull final StringEntity requestEntity)
+    throws IOException, ExecutionException, InterruptedException {
+    final HttpPost post = postTemplate();
+    post.setEntity(requestEntity);
+    post.setHeader("Content-Type", "application/xml; charset=" + StandardCharsets.UTF_8.name());
+    post.setHeader(S3Constants.S3_ARTIFACT_KEYS_HEADER_NAME, objectKey);
+    final HttpResponse response = HttpClientUtil.executeAndReleaseConnection(myTeamCityClient.get(), post, myErrorHandler).get();
+    final String responseBody = EntityUtils.toString(response.getEntity());
     final PresignedUrlListResponseDto presignedUrlListResponseDto = deserializeResponseV2(responseBody);
     return presignedUrlListResponseDto.getPresignedUrls()
                                       .stream()
@@ -213,18 +252,23 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   }
 
   private void recreateClient() {
-    final HttpClient oldClient = myTeamCityClient.getAndUpdate(old -> createClient(myTeamCityConnectionConfiguration));
+    final CloseableHttpClient oldClient = myTeamCityClient.getAndUpdate(old -> createClient(myTeamCityConnectionConfiguration));
     HttpClientUtil.shutdown(oldClient);
   }
 
   private void finishMultipartUploadImpl(@NotNull String objectKey, @Nullable List<String> etags, @NotNull String uploadId, boolean isSuccessful) throws IOException {
-    final PostMethod post = postTemplate();
-    post.setParameter(OBJECT_KEY, objectKey);
-    post.setParameter(OBJECT_KEY + "_BASE64", Base64.getEncoder().encodeToString(objectKey.getBytes(StandardCharsets.UTF_8)));
-    post.setParameter(FINISH_UPLOAD, uploadId);
-    post.setParameter(UPLOAD_SUCCESSFUL, String.valueOf(isSuccessful));
+    final HttpPost post = postTemplate();
+    final MultipartEntity multipartEntity = new MultipartEntity(HttpMultipartMode.BROWSER_COMPATIBLE);
+    post.setEntity(multipartEntity);
+
+    multipartEntity.addPart(OBJECT_KEY, new StringBody(objectKey));
+    multipartEntity.addPart(OBJECT_KEY + "_BASE64", new StringBody(Base64.getEncoder().encodeToString(objectKey.getBytes(StandardCharsets.UTF_8))));
+    multipartEntity.addPart(FINISH_UPLOAD, new StringBody(uploadId));
+    multipartEntity.addPart(UPLOAD_SUCCESSFUL, new StringBody(String.valueOf(isSuccessful)));
     if (isSuccessful && etags != null) {
-      etags.forEach(etag -> post.addParameter(ETAGS, etag));
+      for (String etag : etags) {
+        multipartEntity.addPart(ETAGS, new StringBody(etag));
+      }
     }
     try {
       HttpClientUtil.executeAndReleaseConnection(myTeamCityClient.get(), post, myErrorHandler);
@@ -237,7 +281,7 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
 
 
   @NotNull
-  private StringRequestEntity multipartRequestEntity(@NotNull final String s3ObjectKey, @NotNull final List<String> digests, @Nullable String uploadId, @Nullable Long ttl) {
+  private StringEntity multipartRequestEntity(@NotNull final String s3ObjectKey, @NotNull final List<String> digests, @Nullable String uploadId, @Nullable Long ttl) {
     try {
       return requestEntity(PresignedUrlRequestSerializer.serializeRequestV2(PresignedUrlListRequestDto.forObjectKeyMultipart(s3ObjectKey, uploadId, digests, ttl)));
     } catch (UnsupportedEncodingException e) {
@@ -247,12 +291,12 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   }
 
   @NotNull
-  private StringRequestEntity requestEntity(@NotNull String xml) throws UnsupportedEncodingException {
-    return new StringRequestEntity(xml, ContentType.APPLICATION_XML.getMimeType(), StandardCharsets.UTF_8.name());
+  private StringEntity requestEntity(@NotNull String xml) throws UnsupportedEncodingException {
+    return new StringEntity(xml, ContentType.create(ContentType.APPLICATION_XML.getMimeType(), StandardCharsets.UTF_8));
   }
 
   @NotNull
-  private StringRequestEntity s3ObjectKeysRequestEntity(@NotNull Collection<String> s3ObjectKeys, Map<String, String> digests) {
+  private StringEntity s3ObjectKeysRequestEntity(@NotNull Collection<String> s3ObjectKeys, Map<String, String> digests) {
     try {
       final List<Pair<String, String>> keysWithDigests = s3ObjectKeys.stream().map(k -> Pair.create(k, digests.get(k))).collect(Collectors.toList());
       return requestEntity(PresignedUrlRequestSerializer.serializeRequestV2(PresignedUrlListRequestDto.forObjectKeysWithDigests(keysWithDigests)));
@@ -263,7 +307,7 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   }
 
   @NotNull
-  private StringRequestEntity s3ObjectKeyRequestEntity(@NotNull String objectKey, @Nullable String digest, @Nullable Long ttl) {
+  private StringEntity s3ObjectKeyRequestEntity(@NotNull String objectKey, @Nullable String digest, @Nullable Long ttl) {
     try {
       return requestEntity(PresignedUrlRequestSerializer.serializeRequestV2(PresignedUrlListRequestDto.forObjectKeyWithDigest(objectKey, digest, ttl)));
     } catch (UnsupportedEncodingException e) {
@@ -273,13 +317,12 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
   }
 
   @NotNull
-  private PostMethod postTemplate() {
-    final PostMethod post = new PostMethod(myPresignedUrlsPostUrl);
-    post.addRequestHeader(HttpHeaders.USER_AGENT, HttpUserAgent.getUserAgent());
-    post.setRequestHeader("Accept", "application/xml");
-    post.setRequestHeader("Accept-Charset", StandardCharsets.UTF_8.name());
+  private HttpPost postTemplate() {
+    final HttpPost post = new HttpPost(myPresignedUrlsPostUrl);
+    post.addHeader(HttpHeaders.USER_AGENT, HttpUserAgent.getUserAgent());
+    post.setHeader("Accept", "application/xml");
+    post.setHeader("Accept-Charset", StandardCharsets.UTF_8.name());
     addAdditionalHeaders(post);
-    post.setDoAuthentication(true);
     return post;
   }
 
@@ -296,16 +339,16 @@ public class TeamCityServerPresignedUrlsProviderClient implements PresignedUrlsP
     }
   }
 
-  private void addAdditionalHeaders(HttpMethod request) {
+  private void addAdditionalHeaders(HttpPost request) {
     HashMap<String, String> headerToProviderMap = new HashMap<>();
-    ArtifactTransportAdditionalHeadersProvider.Configuration configuration = () -> request.getName();
+    ArtifactTransportAdditionalHeadersProvider.Configuration configuration = () -> request.getMethod();
     for (ArtifactTransportAdditionalHeadersProvider extension : myAdditionalHeadersProviders) {
       List<ArtifactTransportAdditionalHeadersProvider.Header> headers = extension.getHeaders(configuration);
       String extensionName = extension.getClass().getName();
       for (ArtifactTransportAdditionalHeadersProvider.Header header : headers) {
         String existingExtensionsName = headerToProviderMap.get(header.getName().toUpperCase());
         if (existingExtensionsName == null) {
-          request.addRequestHeader(header.getName(), header.getValue());
+          request.addHeader(header.getName(), header.getValue());
           headerToProviderMap.put(header.getName().toUpperCase(), extensionName);
         } else {
           String headerName = header.getName();
